--- a/platformio.ini
+++ b/platformio.ini
@@ -31,12 +31,12 @@ build_flags = -DSERIALCOM_SPEED=2000000
 ; ESP32 board
 ;==========================================================
 [esp32]
-platform = espressif32@6.0.0
+platform = espressif32 @ 6.12.0
 lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
 [env:SK6812_RGBW_COLD]
-build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE -DDATA_PIN=2 ${env.build_flags}
+build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE -DDATA_PIN=16 -DLED_POWER_PIN=12 -DLED_POWER_INVERT=false ${env.build_flags}
 custom_prog_version = esp32_SK6812_RGBW_COLD
 
 board = esp32dev
