--- a/platformio.ini
+++ b/platformio.ini
@@ -31,9 +31,23 @@ build_flags = -DSERIALCOM_SPEED=2000000
 ; ESP32 board
 ;==========================================================
 [esp32]
-platform = espressif32 @ 6.12.0
+platform = espressif32
 lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
+
+[esp32c6]
+platform = espressif/arduino-esp32
+lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
+test_ignore =
+
+[env:ESP32C6_SK6812_RGBW_COLD]
+build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE -DDATA_PIN=2 -DLED_POWER_PIN=11 -DLED_POWER_INVERT=false ${env.build_flags}
+custom_prog_version = ESP32C6_SK6812_RGBW_COLD
+
+board = esp32-c6-devkitc-1
+platform = ${esp32c6.platform}
+lib_deps = ${esp32c6.lib_deps}
+test_ignore = ${esp32c6.test_ignore}
 
 [env:SK6812_RGBW_COLD]
 build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE -DDATA_PIN=16 -DLED_POWER_PIN=12 -DLED_POWER_INVERT=false ${env.build_flags}
