--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,7 @@ lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
 [esp32c6]
-platform = espressif/arduino-esp32
+platform = espressif32
 lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
