--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Install PlatformIO
       run: |
         python -m pip install --upgrade pip
+        pip install intelhex
         pip install --upgrade platformio
 
     - name: Run PlatformIO
