--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,8 @@ default_envs = ESP32C6_SK6812_RGBW_COLD
 #default_envs = SK6812_RGBW_COLD, SK6812_RGBW_NEUTRAL, WS281x_RGB, SPI_APA102_SK9822_HD107, SPI_WS2801, s2_mini_SK6812_RGBW_COLD, s2_mini_SK6812_RGBW_NEUTRAL, s2_mini_WS281x_RGB, s2_mini_SPI_APA102_SK9822_HD107, s2_mini_SPI_WS2801
 
 [env]
-framework = arduino
+#framework = arduino
+framework = espidf
 extra_scripts = pre:extra_script.py
 build_flags = -DSERIALCOM_SPEED=2000000
 
