--- a/platformio.ini
+++ b/platformio.ini
@@ -38,7 +38,7 @@ lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
 [esp32c6]
-platform = espressif32 @ 6.12.0
+platform = arduinoespressif32
 lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
