--- a/platformio.ini
+++ b/platformio.ini
@@ -33,7 +33,10 @@ build_flags = -DSERIALCOM_SPEED=2000000
 ; ESP32 board
 ;==========================================================
 [esp32]
-platform = espressif32
+platform = arduinoespressif32
+platform_packages =
+    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.5
 lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
