--- a/platformio.ini
+++ b/platformio.ini
@@ -24,8 +24,8 @@ default_envs = ESP32C6_SK6812_RGBW_COLD
 #default_envs = SK6812_RGBW_COLD, SK6812_RGBW_NEUTRAL, WS281x_RGB, SPI_APA102_SK9822_HD107, SPI_WS2801, s2_mini_SK6812_RGBW_COLD, s2_mini_SK6812_RGBW_NEUTRAL, s2_mini_WS281x_RGB, s2_mini_SPI_APA102_SK9822_HD107, s2_mini_SPI_WS2801
 
 [env]
-framework = arduino
-#framework = espidf
+#framework = arduino
+framework = espidf@5.1
 extra_scripts = pre:extra_script.py
 build_flags = -DSERIALCOM_SPEED=2000000
 
@@ -33,15 +33,15 @@ build_flags = -DSERIALCOM_SPEED=2000000
 ; ESP32 board
 ;==========================================================
 [esp32]
-platform = arduinoespressif32
+platform = espressif32
 platform_packages =
     platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.5
+    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git
 lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
 [esp32c6]
-platform = arduinoespressif32
+platform = espressif32
 lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
