--- a/platformio.ini
+++ b/platformio.ini
@@ -38,10 +38,10 @@ lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore =
 
 [esp32c6]
-platform = https://github.com/platformio/platform-espressif32.git
-platform_packages =
-	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
-	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git
+platform = https://github.com/pioarduino/platform-espressif32
+#platform_packages =
+#	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+#	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git
 #platform = espressif32
 #platform_packages =
 #    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
