--- a/platformio.ini
+++ b/platformio.ini
@@ -46,7 +46,8 @@ platform = https://github.com/pioarduino/platform-espressif32
 #platform_packages =
 #    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 #    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git
-lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
+#lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
+lib_deps = https://github.com/Makuna/NeoPixelBus.git
 test_ignore =
 
 [env:ESP32C6_SK6812_RGBW_COLD]
