--- a/platformio.ini
+++ b/platformio.ini
@@ -51,7 +51,7 @@ lib_deps = https://github.com/Makuna/NeoPixelBus.git
 test_ignore =
 
 [env:ESP32C6_SK6812_RGBW_COLD]
-build_flags = -DNEOPIXEL_RGBW -DCONFIG_IDF_TARGET_ESP32C6 -DCOLD_WHITE -DDATA_PIN=2 -DLED_POWER_PIN=1 -DLED_POWER_INVERT=false ${env.build_flags}
+build_flags = -DNEOPIXEL_RGBW -DESP32C6 -DCONFIG_IDF_TARGET_ESP32C6 -DCOLD_WHITE -DDATA_PIN=2 -DLED_POWER_PIN=1 -DLED_POWER_INVERT=false ${env.build_flags}
 custom_prog_version = ESP32C6_SK6812_RGBW_COLD
 
 board = esp32-c6-devkitc-1
