--- a/platformio.ini
+++ b/platformio.ini
@@ -54,7 +54,7 @@ test_ignore =
 build_flags = -DNEOPIXEL_RGBW -DESP32C6 -DCONFIG_IDF_TARGET_ESP32C6 -DCOLD_WHITE -DDATA_PIN=2 -DLED_POWER_PIN=1 -DLED_POWER_INVERT=false ${env.build_flags}
 custom_prog_version = ESP32C6_SK6812_RGBW_COLD
 
-board = esp32-c6-devkitc-1
+board = esp32-c6-devkitm-1
 platform = ${esp32c6.platform}
 lib_deps = ${esp32c6.lib_deps}
 test_ignore = ${esp32c6.test_ignore}
