--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@
 
 
 [platformio]
-default_envs = ESP32C6_SK6812_RGBW_COLD
+default_envs = ESP32S3_SK6812_RGBW_COLD
 #default_envs = SK6812_RGBW_COLD, SK6812_RGBW_NEUTRAL, WS281x_RGB, SPI_APA102_SK9822_HD107, SPI_WS2801, s2_mini_SK6812_RGBW_COLD, s2_mini_SK6812_RGBW_NEUTRAL, s2_mini_WS281x_RGB, s2_mini_SPI_APA102_SK9822_HD107, s2_mini_SPI_WS2801
 
 [env]
@@ -50,6 +50,19 @@ platform = https://github.com/pioarduino/platform-espressif32
 lib_deps = https://github.com/Makuna/NeoPixelBus.git
 test_ignore =
 
+[esp32s3]
+platform = https://github.com/pioarduino/platform-espressif32
+#platform_packages =
+#	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+#	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git
+#platform = espressif32
+#platform_packages =
+#    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+#    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git
+#lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
+lib_deps = https://github.com/Makuna/NeoPixelBus.git
+test_ignore =
+
 [env:ESP32C6_SK6812_RGBW_COLD]
 build_flags = -DNEOPIXEL_RGBW -DESP32C6 -DCONFIG_IDF_TARGET_ESP32C6 -DCOLD_WHITE -DDATA_PIN=2 -DLED_POWER_PIN=1 -DLED_POWER_INVERT=false ${env.build_flags}
 custom_prog_version = ESP32C6_SK6812_RGBW_COLD
@@ -58,6 +71,16 @@ board = esp32-c6-devkitm-1
 platform = ${esp32c6.platform}
 lib_deps = ${esp32c6.lib_deps}
 test_ignore = ${esp32c6.test_ignore}
+
+
+[env:ESP32S3_SK6812_RGBW_COLD]
+build_flags = -DNEOPIXEL_RGBW -DCONFIG_IDF_TARGET_ESP32S3 -DCOLD_WHITE -DDATA_PIN=43 ${env.build_flags}
+custom_prog_version = ESP32S3_SK6812_RGBW_COLD
+
+board = esp32-s3-devkitc-1
+platform = ${esp32s3.platform}
+lib_deps = ${esp32s3.lib_deps}
+test_ignore = ${esp32s3.test_ignore}
 
 #[env:SK6812_RGBW_COLD]
 #build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE -DDATA_PIN=16 -DLED_POWER_PIN=12 -DLED_POWER_INVERT=false ${env.build_flags}
