--- a/platformio.ini
+++ b/platformio.ini
@@ -74,7 +74,7 @@ test_ignore = ${esp32c6.test_ignore}
 
 
 [env:ESP32S3_SK6812_RGBW_COLD]
-build_flags = -DNEOPIXEL_RGBW -DCONFIG_IDF_TARGET_ESP32S3 -DCOLD_WHITE -DDATA_PIN=43 ${env.build_flags}
+build_flags = -DNEOPIXEL_RGBW -DESP32S3 -DCONFIG_IDF_TARGET_ESP32S3 -DCOLD_WHITE -DDATA_PIN=43 ${env.build_flags}
 custom_prog_version = ESP32S3_SK6812_RGBW_COLD
 
 board = esp32-s3-devkitc-1
