--- a/platformio.ini
+++ b/platformio.ini
@@ -51,7 +51,7 @@ lib_deps = https://github.com/Makuna/NeoPixelBus.git
 test_ignore =
 
 [esp32s3]
-platform = espressif32
+platform = espressif32@5.4
 #platform_packages =
 #	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 #	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git
